--- a/index.html
+++ b/index.html
@@ -1047,8 +1047,8 @@
                 <div class="hero-content">
                     <div class="hero-text">
                         <div class="ai-badge">🤖 AI-Powered Development</div>
-                        <h1>Building the <span class="gradient-text">Future</span> with Code & Design</h1>
-                        <p>I leverage cutting-edge AI to create stunning apps, websites, and user experiences that drive results. From concept to deployment, I turn your vision into reality.</p>
+                        <h1>👋Welcome👋 to <span class="gradient-text">iamb design lab</span>. I build apps and websites that think.</h1>
+                        <p>I love creating AI-powered solutions that actually understand your users. Apps, websites, chatbots – whatever helps your business work smarter.</p>
                         <div class="hero-buttons">
                             <a href="#contact" class="cta-button">Start Your Project</a>
                             <a href="#services" class="btn-secondary">View Services</a>
